add Image files

--- a/View/6.html
+++ b/View/6.html
@@ -1,20 +1,78 @@
-<!doctype html>
-<html>
+<html lang="en">
 <head>
-  <title>SoongPiler-JAVA</title>
+  <title> SoongPiler-JAVA</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
-    <script src=
-    "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-    </script>
-  <script src="colors.js"> </script>
 
+  <meta name="author" content="YUSEONG">
+  <meta name="description" content="SoongPiler Project">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1">
+
+  <!-- http://ogp.me/ -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="SoongPiler">
+  <meta property="og:title" content="Build software better, together">
+  <meta property="og:description" content="SoongSil Univ Web Compiler Project">
+  <meta property="og:image" content="img/logo__github.png">
+  <meta property="og:url" content="https://ssu.ac.kr">
+
+  <!-- https://developer.twitter.com/en/docs/tweets/optimize-with-cards/guides/getting-started.html -->
+  <meta property="twitter:card" content="summary">
+  <meta property="twitter:site" content="SoongPiler">
+  <meta property="twitter:title" content="Build software better, together">
+  <meta property="twitter:description" content="SoongSil Univ Web Compiler Project">
+  <meta property="twitter:image" content="img/logo__github.png">
+  <meta property="twitter:url" content="https://ssu.ac.kr">
+
+  <!-- <link rel="shortcut icon" href="image/x-icon" href="favicon.ico"> --> 
+  <link rel="icon" href="../favicon.png">
+  <link rel="apple-touch-icon" href="../favicon.png">
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="css/reset.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
-  <h1><a href="index.html">SoongPiler-입력과 출력</a></h1>
-  <!-- <input id = 'night_day' type="button" value="night" onclick="
-  nightDayHandler(this);"> -->
+  <div class="body__container">  
+
+    <!-- HEADER -->
+    <header class="section">
+        <div class="inner clearfix">
+            <div class="menu-group float--left">
+                <div class="logo">
+                    <!-- <a href="../index.html">SoongPiler</a> -->
+                </div>
+                <ul class="main-menu">
+                    <li><a href="../index.html">SoongPiler</a></li>
+                    <li><a href="1.html">학습하기</a></li>
+                    <li><a href="../Controller/compile.php">JAVA 코딩</a></li>
+                    <li><a href="../Controller/python.php">PYTHON 코딩</a></li>
+                    <li><a href="#">질문하기</a></li>
+                </ul>
+            </div>
+
+            <div class="sign-group float--right">
+                <div class="btn-group">
+                    <a href="#" class="btn sign-in">Sign in</a>
+                    <a href="#" class="btn btn--primary sign-up">Sign up</a>
+                </div>
+                <form id="search-form" method="POST" action="">
+                    <input type="text" id="search" class="input--text" placeholder="Search SoongPiler">
+                    <input type="submit" value="Submit">
+                </form> 
+                <ul class="sub-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>                   
+            </div>
+
+        </div>
+    </header>
+  </div>
+
   <div id="grid">
     <ol>
       <li><a href="1.html"> JAVA란</a> </li>
@@ -25,20 +83,18 @@
       <li><a href="6.html"> 입력과 출력</a> </li>
       <li><a href="7.html"> 수업을 마치며</a> </li>
     </ol>
+
       <div id="article">
+        <br><br>
         <h2> SoongPiler-입력과 출력</h2>
         똑같은 결과를 출력하는 프로그램은 일회용입니다.
         <br>하지만 입력에 따라서 다른 출력 결과를 만들어주는 프로그램은 다양한 상황에서 힘을 발휘할 수 있습니다.
         <br>여기서는 재활용 가능한 프로그램을 만드는 방법을 살펴봅니다.
         <p>이번시간에는 변수에 대해 배워 보겠습니다.<br>
-        첫번째 영상은 입력과 출력의 argument&parameter 강의 입니다.</p>
+        첫번째 영상은 입력과 출력의 argument 와 parameter 강의 입니다.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/-xllzUahaFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p> 두번째 영상은 변수의 효용 강의 입니다<br>
+        <p> <br> 두번째 영상은 변수의 효용 강의 입니다<br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/66S529MuxpY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </p>
-        <img src="html_coding_image.jpg" width="50%" style="margin-top:20px;">
-        <p style="margin-top: 0px;"><a href="../controller/compile.php">직접 도전해 보세요!</a>
-        </p>
       </div>
   </div>
 </body>
