--- a/View/1.html
+++ b/View/1.html
@@ -1,21 +1,78 @@
-<!doctype html>
-<html>
+<html lang="en">
 <head>
   <title> SoongPiler-JAVA</title>
   <meta charset="utf-8">
+
+  <meta name="author" content="YUSEONG">
+  <meta name="description" content="SoongPiler Project">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1">
+
+  <!-- http://ogp.me/ -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="SoongPiler">
+  <meta property="og:title" content="Build software better, together">
+  <meta property="og:description" content="SoongSil Univ Web Compiler Project">
+  <meta property="og:image" content="img/logo__github.png">
+  <meta property="og:url" content="https://ssu.ac.kr">
+
+  <!-- https://developer.twitter.com/en/docs/tweets/optimize-with-cards/guides/getting-started.html -->
+  <meta property="twitter:card" content="summary">
+  <meta property="twitter:site" content="SoongPiler">
+  <meta property="twitter:title" content="Build software better, together">
+  <meta property="twitter:description" content="SoongSil Univ Web Compiler Project">
+  <meta property="twitter:image" content="img/logo__github.png">
+  <meta property="twitter:url" content="https://ssu.ac.kr">
+
+  <!-- <link rel="shortcut icon" href="image/x-icon" href="favicon.ico"> --> 
+  <link rel="icon" href="../favicon.png">
+  <link rel="apple-touch-icon" href="../favicon.png">
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="css/reset.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
   <link rel="stylesheet" href="style.css">
-  <script src=
-  "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-  </script>
-  <script src ='colors.js'></script>
-
-
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
-  <h1><a href="index.html">SoongPiler</a></h1>
-  <!-- <input id = 'night_day' type="button" value="night" onclick="
-  nightDayHandler(this);"> -->
+  <div class="body__container">  
+
+    <!-- HEADER -->
+    <header class="section">
+        <div class="inner clearfix">
+            <div class="menu-group float--left">
+                <div class="logo">
+                    <!-- <a href="../index.html">SoongPiler</a> -->
+                </div>
+                <ul class="main-menu">
+                    <li><a href="../index.html">SoongPiler</a></li>
+                    <li><a href="1.html">학습하기</a></li>
+                    <li><a href="../Controller/compile.php">JAVA 코딩</a></li>
+                    <li><a href="../Controller/python.php">PYTHON 코딩</a></li>
+                    <li><a href="#">질문하기</a></li>
+                </ul>
+            </div>
+
+            <div class="sign-group float--right">
+                <div class="btn-group">
+                    <a href="#" class="btn sign-in">Sign in</a>
+                    <a href="#" class="btn btn--primary sign-up">Sign up</a>
+                </div>
+                <form id="search-form" method="POST" action="">
+                    <input type="text" id="search" class="input--text" placeholder="Search SoongPiler">
+                    <input type="submit" value="Submit">
+                </form> 
+                <ul class="sub-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>                   
+            </div>
+
+        </div>
+    </header>
+  </div>
+
   <div id="grid">
     <ol>
       <li><a href="1.html"> JAVA란</a> </li>
@@ -28,16 +85,14 @@
     </ol>
 
     <div id="article">
+      <br>
     <h2> SoongPiler-JAVA란 </h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-dPXqgWQBGE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <br><br>
     <p style="margin-top:0;">이 수업은 가장 인기있는 컴퓨터 언어인 Java의 기본을 알려드리는 수업입니다.<br>
        이 수업은 무엇을 더 전달할까? 보다는 무엇을 덜 전달할까?에 집중한 수업입니다.<br>
       지식을 더 많이 전달하는 대신에,<br>
        지식없이도 일을 할 수 있는 방법을 소개해드리기 위해서 노력했습니다. 이 수업이 여러분의 자립에 조금이라도 도움이 될 수 있었으면 좋겠습니다.
-    </p>
-    <img src="html_coding_image.jpg" width="50%">
-    <p style="margin-top: 0px;">
-      <a href="../controller/compile.php">직접 도전해 보세요!</a>
     </p>
     </div>
   </div>
